--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <![endif]-->
 
     <title>Tiein by glaise</title>
+    <script>
+      alert('gfhgfh');
+    </script>
   </head>
 
   <body>
