--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Tiein by glaise</title>
     <script>
-      alert('gfhgfh');
+     window.location.replace("http://www.thetiein.com");
     </script>
   </head>
 
