--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <title>Tiein by glaise</title>
     <script>
-     window.location.replace("http://www.thetiein.com");
+    alert('hello....');
+    // window.location.replace("http://www.thetiein.com");
     </script>
   </head>
 
